# motion2homeassistant

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: external-projects.cmake
src/: main.cpp  motion.cpp  motion.h  rest.cpp  rest.h
